@@ -3,6 +3,7 @@ Kickstart 4.1.2
 + By default hide fine tuning options
 + Better detection of the directory holding the archives and the best choice for a temporary directory
 # [MEDIUM] Extracting symlinks in Dry Run mode would cause existing symlinks to be removed
+# [MEDIUM] FTP/SFTP browser would fail on some servers when you don't provide a starting directory
 # [LOW] Kickstart won't start on servers with problematic open_basedir restrictions
 # [LOW] PHP notices when extracting symlinks
 # [LOW] No error message shown when the server throws an error (thanks, Carlos!)
